# api-flask-neo4j

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  settings.py  todo.md
db/: connect.py
src/api/: api_main.py
src/db/: connect.py
src/db/data/: MOCK_DATA.json  create.py  data.py
src/other/: settings.py
